Refactor Level4Test for GUI validation checks